# dev-soma-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-quality.yml  ci-security.yml  soma-quality.yml
tests/: conftest.py
